--- a/HTML/tic.html
+++ b/HTML/tic.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Advanced Tic-Tac-Toe</title>
-  <link rel="stylesheet" href="CSS/tic.css">
+  <title>Premium Tic-Tac-Toe</title>
+  <link rel="stylesheet" href="/CSS/tic.css">
 </head>
 <body>
   <div class="container">
@@ -13,6 +13,6 @@
     <p id="message"></p>
     <button id="restart">Restart Game</button>
   </div>
-  <script src="JS/tic.js"></script>
+  <script src="/JS/tic.js"></script>
 </body>
 </html>
