--- a/HTML/tic.html
+++ b/HTML/tic.html
@@ -3,16 +3,43 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Premium Tic-Tac-Toe</title>
-  <link rel="stylesheet" href="/CSS/tic.css">
+  <title>Tic Tac Toe</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="container">
-    <h1>Tic-Tac-Toe</h1>
-    <div class="board" id="board"></div>
-    <p id="message"></p>
-    <button id="restart">Restart Game</button>
+  <div id="homeScreen" class="screen active">
+    <h1>Welcome to Tic Tac Toe!</h1>
+    <button id="playWithComputer">Play with Computer</button>
   </div>
-  <script src="/JS/tic.js"></script>
+
+  <div id="levelSelection" class="screen">
+    <h2>Select Difficulty</h2>
+    <div class="button-group">
+      <button id="easy">Easy</button>
+      <button id="medium">Medium</button>
+      <button id="hard">Hard</button>
+    </div>
+  </div>
+
+  <div id="gameContainer" class="screen">
+    <h2 id="message">Player X's turn</h2>
+    <div id="pointsDisplay">Points: 0</div>
+    <div id="board" class="board"></div>
+    <div class="button-group">
+      <button id="nextRound">Next Round</button>
+      <button id="endMatch">End Match</button>
+      <button id="checkScore" style="display: none;">View Summary</button>
+    </div>
+  </div>
+
+  <div id="reportScreen" class="screen">
+    <h1>Game Report</h1>
+    <div id="report" class="summary-box"></div>
+    <button id="playAgain">Play Again</button>
+  </div>
+
+  <div id="notification" class="notification"></div>
+
+  <script src="script.js"></script>
 </body>
 </html>
