--- a/index.html
+++ b/index.html
@@ -145,6 +145,12 @@
                         </div>
                     </a>
 
+<a href="game/deathrun/index.html" class="game-link" data-category="Action">
+                        <div class="game-tile-popular" style="width: 360px; height: 420px;">
+                            <img class="game-icon" src="src/deathrun.webp" alt="2048" width="360" height="360">
+                            <h1 class="game-title">DEATH RUN</h1>
+                        </div>
+                    </a>
 
                 
                 
